--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME='Eysys_HRM'
 APP_ENV=local
 APP_KEY=base64:VO1O9avZLXFpMJClRD5DfAemahr/L2Y4c0iIsU62TF0=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost/HRM_Code
 
