employee form updated

--- a/.env
+++ b/.env
@@ -22,11 +22,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER='smtp'
-MAIL_HOST='smtp.mailtrap.io'
-MAIL_PORT='2525'
-MAIL_USERNAME=''
-MAIL_PASSWORD=''
-MAIL_ENCRYPTION=''
+MAIL_HOST='mail.eysys.co.in'
+MAIL_PORT='465'
+MAIL_USERNAME='message@eysys.co.in'
+MAIL_PASSWORD='$NMrf&T!QLJP'
+MAIL_ENCRYPTION='ssl'
 
 PUSHER_APP_ID=''
 PUSHER_APP_KEY=''
