payslip mailing for individual employee

--- a/.env
+++ b/.env
@@ -22,10 +22,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER='smtp'
-MAIL_HOST='mail.eysys.co.in'
+MAIL_HOST='smtp.gmail.com'
 MAIL_PORT='465'
-MAIL_USERNAME='message@eysys.co.in'
-MAIL_PASSWORD='$NMrf&T!QLJP'
+MAIL_USERNAME='message.eysys@gmail.com'
+MAIL_PASSWORD='eysyspharma123'
 MAIL_ENCRYPTION='ssl'
 
 PUSHER_APP_ID=''
