--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:VO1O9avZLXFpMJClRD5DfAemahr/L2Y4c0iIsU62TF0=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost/HRM_Code
+APP_URL=http://localhost/EysysHRM_Code
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -16,6 +16,7 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
+QUEUE_CONNECTION=database
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
