--- a/.env
+++ b/.env
@@ -23,11 +23,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER='smtp'
-MAIL_HOST='smtp.gmail.com'
-MAIL_PORT='465'
+MAIL_MAILER='smtp'
+MAIL_HOST='smtp-relay.sendinblue.com'
+MAIL_PORT='587'
 MAIL_USERNAME='message.eysys@gmail.com'
-MAIL_PASSWORD='eysyspharma123'
-MAIL_ENCRYPTION='ssl'
+MAIL_PASSWORD='A4gtDnpCN6Y8mRIE'
+MAIL_ENCRYPTION='tls'
 
 PUSHER_APP_ID=''
 PUSHER_APP_KEY=''
